# ijk

./: README
include/: ijk.tpp  ijkIO.tpp  ijkNrrd.h  ijk_macros.h  ijkbits.tpp  ijkcheck_geom.tpp  ijkcommand_line.tpp  ijkcontourtree.tpp  ijkcontourtreeIO.tpp  ijkcoord.tpp  ijkcube.tpp  ijkdatatable.tpp  ijkdistance.tpp  ijkenum.tpp  ijkfacet_intersection_table.tpp  ijkgraph.tpp  ijkgrid.tpp  ijkgrid_func.tpp  ijkgrid_macros.h  ijkgrid_nrrd.tpp  ijkhash.tpp  ijkinterpolate.tpp  ijkisoIO.tpp  ijkisocoord.tpp  ijkisopoly.tpp  ijklist.tpp  ijkmap.tpp  ijkmerge.tpp  ijkmesh.tpp  ijkmesh2D_angle.tpp  ijkmesh2D_angle_triangle.tpp  ijkmesh2D_datastruct.tpp  ijkmesh2D_geom.tpp  ijkmesh2D_split.tpp  ijkmesh2D_splitII.tpp  ijkmesh2D_triangulate.tpp  ijkmesh2D_triangulateE.tpp  ijkmesh2D_triangulateRT.tpp  ijkmesh_cpp11.tpp  ijkmesh_datastruct.tpp  (+22 more)
isotable/: iso.cube.2D.xit  iso.cube.3D.xit  iso.cube.sepPos.3D.xit  iso.nep.cube.3D.xit  iso.pyramid.3D.xit  iso.simplex.3D.xit
src/: README
src/NrrdIO/: CMakeLists.txt
src/ijkMCtable/: CMakeLists.txt  README  clarkson_hull.c  clarkson_hull.h  ijkMCtable.h  ijkMCtableV1.xsd  ijkMCtableV2.xsd  ijkMCtable_doxygen.config  ijkMCtable_invert.cpp  ijkMCtable_orient.tpp  ijkMCtable_poly.h  ijkMCtable_properties.h  ijkMCtableinfo.cpp  ijkdiffMCtable.cpp  ijkgenMCpatch.cpp  ijkgenMCpatch.h  ijkgenMCtable.cpp  ijktext2c.cpp  outambigtable.cpp
src/ijkdual/: CMakeLists.txt  README  ijkdual.tpp  ijkdualIO.cpp  ijkdualIO.h  ijkdualIO.tpp  ijkdual_constants.h  ijkdual_count.tpp  ijkdual_datastruct.cpp  ijkdual_datastruct.h  ijkdual_doxygen.config  ijkdual_enum_str.h  ijkdual_extract.tpp  ijkdual_isosurface.tpp  ijkdual_main.cpp  ijkdual_mesh.tpp  ijkdual_position.tpp  ijkdual_query.tpp  ijkdual_triangulate.tpp  ijkdual_types.h  ijkdualtable.tpp
src/ijkdualtable/: CMakeLists.txt  README  ijkdualtableX.tpp  ijkdualtable_vert.tpp  testdualtable.cpp
src/ijkgenscalar/: CMakeLists.txt  README  README~  ijkgencoord.tpp  ijkgengeom.tpp  ijkgenscalar.cpp  ijkgenscalar.h  ijkgenscalar.tpp  ijkgenscalarIO.cpp  ijkgenscalarIO.h  ijkgradientfield.tpp  ijkscalarfield.tpp
src/ijkisoinfo/: CMakeLists.txt  README  ijkisoinfo.cpp  ijkisoinfo.h
src/ijkmcube/: CMakeLists.txt  README  ijkMCtable.cpp  ijkMCtable_ambig.cpp  ijkMCtable_ambig.h  ijkMCtable_poly.cpp  ijkMCtable_xitIO.cpp  ijkMCtable_xitIO.h  ijkmcube.cpp  ijkmcube.h  ijkmcubeIO.cpp  ijkmcubeIO.h  ijkmcube_datastruct.cpp  ijkmcube_datastruct.h  ijkmcube_doxygen.config  ijkmcube_extract.cpp  ijkmcube_extract.h  ijkmcube_main.cpp  ijkmcube_sub.cpp  ijkmcube_sub.h  ijkmcube_types.h  ijkmcube_util.cpp  ijkmcube_util.h  ijkoctree.cpp  ijkoctree.h  ijksnapmc.cpp  ijksnapmc.h
src/ijkmesh/: CMakeLists.txt  README  ijkmesh.cpp  ijkmesh.h  ijkmesh_doxygen.config
src/ijkmeshdiff/: CMakeLists.txt  README  ijkmeshdiff.cpp
src/ijkmeshinfo/: CMakeLists.txt  README  ijkmeshinfo.cpp  ijkmeshinfo.h  ijkmeshinfoIO.cpp  ijkmeshinfoIO.h  ijkmeshinfoIO.tpp  ijkmeshinfo_compute.cpp  ijkmeshinfo_compute.h  ijkmeshinfo_compute.tpp  ijkmeshinfo_doxygen.config
src/ijkscalar/: CMakeLists.txt  README  ijkscalar.cpp  ijkscalar.h  ijkscalar_doxygen.config
src/ijkscalarinfo/: CMakeLists.txt  README  ijkscalarinfo.cpp  ijkscalarinfo.h  ijkscalarinfo_doxygen.config
